# hazync

./: .dockerignore  .gitignore  AUDIT_2026-07.md  CONTRIBUTING.md  EXPLAINER.md  HARDENING.md  HAZYNC_ARCHITECTURE.md  HAZYNC_ENGINE.md  LICENSE  PROVING.md  README.md  ROADMAP.md  SCALING.md  SECURITY.md  SOUNDNESS.md  THIRD_PARTY_NOTICES.md  WRITEUP.md  provision-vps.sh
.github/workflows/: adversarial.yml  release-sign.yml
accumulator/: .gitignore  Cargo.toml
accumulator/src/: lib.rs
coordinator/: .gitignore  README.md  ROADMAP.md  hazync  server.py
coordinator/deploy/: RUNBOOK.md  backup.sh  gen-witness-window.sh  hazync-bridge.service  hazync-coordinator.service  migrate-coordinator.sh  nginx-hazync.conf
coordinator/web/: index.html
docs/: ACCELERATION.md  HAZYNC_ARCHITECTURE.md  PROVING.md  ROADMAP.md  SOUNDNESS.md  WRITEUP.md
patches/: 0001-serialize-ilp32-int-overload.patch  0002-sha256-route-through-risc0-accelerator.patch  0003-pubkey-ecdsa-verify-via-k256-accel.patch
prover/: .gitignore  README.md  block_130000.json  block_140000.json  block_741000.json  block_741000_badwit.json  check_seg_guards.sh  ci_negative_tests.sh  cluster.sh  fetch_block.py  make_negative_tests.py  rangecluster.sh  test_bip68_locks.sh  test_bip68_real.sh  test_cov_negatives.sh
prover/evidence/: bip68_locks.txt  bip68_real_mainnet.txt  cov_negatives.txt  hardening_validation.txt
prover/host/: Cargo.toml
prover/host/src/: main.rs
prover/methods/: Cargo.toml
prover/methods/guest/: Cargo.toml  bip340_vec.h  build.rs  cpp_probe.cpp  cshims.c  ecdsa_vec.h  verify_input.cpp
prover/methods/guest/src/: bigint_accel.rs  main.rs  utreexo.rs
reproduce/: Dockerfile  METHOD_ID
