[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ['std', 'unstable'] }
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa", "arithmetic"] }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[build-dependencies]
cc = "1"

# RISC0-accelerated RustCrypto crates (secp256k1 EC precompile).
[patch.crates-io]
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
