[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ['std', 'unstable'] }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[build-dependencies]
cc = "1"

# RISC0-accelerated SHA-256 — the one accelerated RustCrypto crate the sound guest uses.
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
